basic setup: -- add postcss handlebars parcel normalisation

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>project init</title>
+    <link rel="stylesheet" href="src/styles/app.css">
+    <title>project messenger</title>
 </head>
 <body>
-<p>
-    test parcel
-</p>
+    <div id="app"></div>
+    <script src="src/index.js" type="module"></script>
 </body>
 </html>
