basic setup: -- add server and handlebars compiler bugfix: -- many bugs created

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="src/styles/app.css">
+<!--    <link rel="stylesheet" href="./src/styles/app.css">-->
     <title>project messenger</title>
 </head>
 <body>
-    <div id="app"></div>
-    <script src="src/index.js" type="module"></script>
+    <div id="app">test</div>
+    <a href="/signup">link to sign shit</a>
+    <script src="src/index.js"></script>
 </body>
 </html>
