basic setup: add tailwind

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<!--    <link rel="stylesheet" href="./src/styles/app.css">-->
+    <link rel="stylesheet" href="./src/styles/app.css">
+    <link rel="stylesheet" href="./src/index.css">
     <title>project messenger</title>
 </head>
 <body>
     <div id="app">test</div>
-    <a href="/signup">link to sign shit</a>
-    <script src="src/index.js"></script>
+    <ul>
+        <li><a href="/signup">link to sign shit</a></li>
+        <li><a href="/login">link to login page</a></li>
+    </ul>
+    <script type="module" src="src/index.js"></script>
 </body>
 </html>
