basic setup: -- code cleanup

--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/app.scss">
-<!--    <link rel="stylesheet" href="index.css">-->
     <title>project messenger</title>
 </head>
 <body>
+    <nav class="flex justify-around m-3">
+        <a href="/signup">link to sign shit</a>
+        <a href="/login">link to login page</a>
+    </nav>
     <div id="app">
-        <h1>test</h1>
-        <ul>
-            <li><a href="/signup">link to sign shit</a></li>
-            <li><a href="/login">link to login page</a></li>
-        </ul>
-    </div>
 
+    </div>
     <script type="module" src="index.js"></script>
 </body>
 </html>
