new features: -- add chat, profile pages -- add photo partial -- add styles -- add images -- add gitignore

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <nav class="flex justify-around m-3">
-        <a href="/signup">link to sign shit</a>
-        <a href="/login">link to login page</a>
+        <a href="/signup">sign shit</a>
+        <a href="/login">login page</a>
+        <a href="/chat">chat page</a>
+        <a href="/profile">profile page</a>
     </nav>
     <div id="app">
 
