review: -- lint everything

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav class="flex justify-around m-3">
-        <a href="/signup">sign shit</a>
+        <a href="/signup">signup sign</a>
         <a href="/login">login page</a>
         <a href="/chat">chat page</a>
         <a href="/profile">profile page</a>
