--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="description" content="yandex praktikum web-messenger">
+    <meta name="author" content="didar overshare">
     <link rel="stylesheet" href="styles/app.scss">
     <title>project messenger</title>
 </head>
 <body>
     <nav class="flex justify-around m-3">
-        <a href="/signup">signup sign</a>
-        <a href="/login">login page</a>
-        <a href="/chat">chat page</a>
-        <a href="/profile">profile page</a>
+        <a href="/signup">signup</a>
+        <a href="/login">login</a>
+        <a href="/chat">chat</a>
+        <a href="/profile">profile</a>
+        <a href="/edit">edit profile</a>
+        <a href="/fix">500</a>
+        <a href="/notFound">400</a>
     </nav>
     <div id="app">
 
