--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,6 @@
     <div id="app">
 
     </div>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.ts"></script>
 </body>
 </html>
