--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta name="description" content="yandex praktikum web-messenger">
-    <meta name="author" content="didar overshare">
-    <link rel="stylesheet" href="styles/app.scss">
-    <title>project messenger</title>
+  <meta charset="UTF-8">
+  <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport">
+  <meta content="yandex praktikum web-messenger" name="description">
+  <meta content="didar overshare" name="author">
+  <link href="styles/app.scss" rel="stylesheet">
+  <title>project messenger</title>
 </head>
 <body>
-    <nav class="flex justify-around m-3">
-        <a href="/signup">signup</a>
-        <a href="/login">login</a>
-        <a href="/chat">chat</a>
-        <a href="/profile">profile</a>
-        <a href="/edit">edit profile</a>
-        <a href="/fix">500</a>
-        <a href="/notFound">400</a>
-    </nav>
-    <div id="app">
+<nav class="flex justify-around m-3">
+  <a href="/signup">signup</a>
+  <a href="/login">login</a>
+  <a href="/chat">chat</a>
+  <a href="/profile">profile</a>
+  <a href="/edit">edit profile</a>
+  <a href="/fix">500</a>
+  <a href="/notFound">400</a>
+</nav>
+<nav class="flex m-3">
+  <a href="/newsignup">new signup</a>
 
-    </div>
-    <script type="module" src="index.ts"></script>
+</nav>
+<div id="app">
+
+</div>
+<script src="index.ts" type="module"></script>
 </body>
 </html>
