sprint iii: -- fix links

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 <nav class="flex justify-around m-3">
-  <a href="/signup">signup</a>
-  <a href="/login">login</a>
-  <a href="/chat">chat</a>
-  <a href="/profile">profile</a>
+  <a href="/sign-up">signup</a>
+  <a href="/">login</a>
+  <a href="/messenger">chat</a>
+  <a href="/settings">profile</a>
   <a href="/edit">edit profile</a>
   <a href="/fix">500</a>
-  <a href="/notFound">400</a>
+  <a href="/notfound">400</a>
 </nav>
 <div id="app">
 
